; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_generic_action_ok_help.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_generic_action_ok_help.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACTION_OK_DL_HELP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @generic_action_ok_help(i8* %0, i8* %1, i32 %2, i64 %3, i64 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  store i8* %0, i8** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i64 %3, i64* %11, align 8
  store i64 %4, i64* %12, align 8
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %16 = load i32, i32* %13, align 4
  %17 = call i8* @msg_hash_to_str(i32 %16)
  store i8* %17, i8** %15, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = load i8*, i8** %15, align 8
  %20 = load i32, i32* %14, align 4
  %21 = load i64, i64* %11, align 8
  %22 = load i64, i64* %12, align 8
  %23 = load i32, i32* @ACTION_OK_DL_HELP, align 4
  %24 = call i32 @generic_action_ok_displaylist_push(i8* %18, i32* null, i8* %19, i32 %20, i64 %21, i64 %22, i32 %23)
  ret i32 %24
}

declare dso_local i8* @msg_hash_to_str(i32) #1

declare dso_local i32 @generic_action_ok_displaylist_push(i8*, i32*, i8*, i32, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
